--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 												<li class="skillz__category__item">BigQuery</li>
 												<li class="skillz__category__item">Tableau/Power BI</li> 
 												<li class="skillz__category__item">Apache Airflow</li>
+												<li class="skillz__category__item">Pyspark</li>
+												<li class="skillz__category__item">Kafka</li>
 												<li class="skillz__category__item">Docker</li>
+
 											</ul>
 
 				</div>
