New - Project (Kakfa lambda stream)

--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
 										</div> <div class="skillz__category"> 
 											<div class="skillz__category__label"><b>Tools</b></div> 
 											<ul> <li class="skillz__category__item">Git</li> 
-												<li class="skillz__category__item">GCP</li>
 												<li class="skillz__category__item">AWS</li>
+												<li class="skillz__category__item">GCP</li>
 												<li class="skillz__category__item">BigQuery</li>
 												<li class="skillz__category__item">Tableau/Power BI</li> 
 												<li class="skillz__category__item">Apache Airflow</li>
 												<li class="skillz__category__item">Pyspark</li>
 												<li class="skillz__category__item">Kafka</li>
 												<li class="skillz__category__item">Docker</li>
+												<li class="skillz__category__item">Terraform</li>
+												
 
 											</ul>
 
