--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<section class="split contact">
 					<section class="alt">
 						<h3>LOCATION</h3>
-						<p>Lagos, Nigeria<br />
+						<p>Birmingham, United Kingdom<br />
 						</p>
 					</section>
 					
@@ -121,7 +121,7 @@
 
 					<section>
 						<h3>PHONE</h3>
-						<p>09035087240</p>
+						<p>+4470462222210</p>
 					</section>
 					<section>
 						<h3>SOCIAL</h3>
